--- a/sblo/008-十万石まんじゅう県に住んでいます.md
+++ b/sblo/008-十万石まんじゅう県に住んでいます.md
@@ -1,4 +1,5 @@
 # 十万石まんじゅう県に住んでいます
+![十万石まんじゅう](img/10mangoku.jpg)
 - ちょっと知りたいことがあって Google Gemini さんに聞いてみました
 ## 質問
 - 「りんご県」「ずんだ県」「きりたんぽ県」のような言い換えを、他の県名についても教えてください。
@@ -6,7 +7,7 @@
 - 北海道 → ジンギスカン県
 - 青森県 → りんご県
 - 岩手県 → わんこそば県
-- 宮城県 → ずんだ県
+	- 宮城県 → ずんだ県
 - 秋田県 → きりたんぽ県
 - 山形県 → さくらんぼ県
 - 福島県 → 喜多方ラーメン県
