--- a/sblo/010-このAI画像を作ったのは誰だぁ！.md
+++ b/sblo/010-このAI画像を作ったのは誰だぁ！.md
@@ -1,4 +1,5 @@
 # このAI画像を作ったのは誰だぁ！
+![探偵が捜査中](img/detective_observing.jpg)
 - 当ブログでは、生成 AI のイラストをよく使わせてもらっています
 - 依頼先は Gemini さんか Copilot さんが多いです
 - お二人の描いた絵を並べてみますね、どっちが誰の作品かわかりますか？
