--- a/sblo/001-大寒.md
+++ b/sblo/001-大寒.md
@@ -1,5 +1,5 @@
 # 大寒
-
+![大寒の光景](img/winter-field.jpg)
 - [シン・さくらのブログ](https://rs.sakura.ad.jp/function/blog/) のサービスが始まった。せっかくなのでブログ作っちゃうよ。
 - 特にネタもないので、ここは季節の雑感を書いていくブログとする。今日は大寒だし。
 - そうだ！「**二十四節気の日には必ず何か書く**」ってことにすれば、飽きてほっぽりだす危険がだいぶ減るんじゃないかな！ なんという名案。
