--- a/tkinter/01-tk.md
+++ b/tkinter/01-tk.md
@@ -2,7 +2,7 @@
 - アプリのメインウィンドウとなるクラス
 
 ## サンプル
-![01-tk-01.pyのスクリーンショット](img/01-tk-01.png)
+![ウィンドウ表示テスト](img/01-tk-01.png)
 
 ```python
 import tkinter
