--- a/sblo/011-啓蟄.md
+++ b/sblo/011-啓蟄.md
@@ -1,5 +1,5 @@
 # 啓蟄
-![啓蟄の光景](img/winter-pond.jpg)
+![啓蟄の光景](img/grass_and_frog.png)	
 - 今日は啓蟄だった。そろそろ虫も外に出てくる季節とのこと。
 - ここで言う虫とは「地を這うもの」の総称だろう。ミミズだってオケラだってアメンボだって虫である。
 <!-- -->
